--- a/1-5alt.html
+++ b/1-5alt.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>METRIC ENGINE | Professional</title>
+    <title>METRIC ENGINE | Tactical Pro</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <style>
         :root {
@@ -13,6 +13,7 @@
             --border: rgba(255, 255, 255, 0.1);
             --text-main: #fafafa;
             --text-dim: #a1a1aa;
+            --danger: #ff453a;
         }
 
         body {
@@ -25,7 +26,6 @@
             padding: 15px;
             display: flex;
             justify-content: center;
-            overflow-x: hidden;
         }
 
         .wrapper { width: 100%; max-width: 420px; }
@@ -38,24 +38,23 @@
         }
 
         .brand-header h1 {
-            font-size: 18px;
+            font-size: 16px;
             font-weight: 800;
             margin: 0;
-            background: linear-gradient(to right, #fff, #71717a);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            letter-spacing: 1px;
+            color: var(--text-dim);
         }
 
         .glass-card {
             background: var(--glass);
-            backdrop-filter: blur(20px);
+            backdrop-filter: blur(25px);
             border: 1px solid var(--border);
-            border-radius: 20px;
-            padding: 18px;
+            border-radius: 24px;
+            padding: 20px;
             margin-bottom: 12px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
         }
 
-        /* Küçük Giriş Kartı */
         .input-grid {
             display: grid;
             grid-template-columns: 1fr 1fr;
@@ -65,102 +64,120 @@
         .full-width { grid-column: span 2; }
 
         label {
-            font-size: 10px;
-            font-weight: 700;
+            font-size: 9px;
+            font-weight: 800;
             color: var(--text-dim);
             text-transform: uppercase;
             margin-bottom: 6px;
             display: block;
+            letter-spacing: 0.5px;
         }
 
         input, select {
             width: 100%;
-            background: rgba(0, 0, 0, 0.4);
+            background: rgba(255, 255, 255, 0.03);
             border: 1px solid var(--border);
-            border-radius: 10px;
-            padding: 10px 12px;
+            border-radius: 12px;
+            padding: 12px;
             color: #fff;
-            font-size: 14px;
+            font-size: 15px;
             outline: none;
             box-sizing: border-box;
+            transition: 0.3s;
         }
+
+        input:focus { border-color: var(--accent); background: rgba(0, 255, 133, 0.05); }
 
         .btn-analyze {
             width: 100%;
             background: var(--accent);
             color: #000;
             border: none;
-            border-radius: 12px;
-            padding: 14px;
-            font-weight: 800;
+            border-radius: 14px;
+            padding: 16px;
+            font-weight: 900;
             margin-top: 15px;
             cursor: pointer;
+            text-transform: uppercase;
+            letter-spacing: 1px;
         }
 
-        /* Kendi İçinde Kayan Analiz Kartı */
+        /* Dahili Scroll Analiz Kartı */
         #result-panel {
             display: none;
-            max-height: 350px;
+            max-height: 400px;
             overflow-y: auto;
-            scrollbar-width: thin;
-            scrollbar-color: var(--accent) transparent;
+            padding-top: 10px;
         }
 
-        #result-panel::-webkit-scrollbar { width: 4px; }
-        #result-panel::-webkit-scrollbar-thumb { background: var(--accent); border-radius: 10px; }
+        #result-panel::-webkit-scrollbar { width: 3px; }
+        #result-panel::-webkit-scrollbar-thumb { background: var(--accent); }
 
-        .percentage-display {
+        .summary-box {
             text-align: center;
-            padding: 10px 0;
+            padding-bottom: 20px;
             border-bottom: 1px solid var(--border);
-            margin-bottom: 15px;
         }
 
         .percentage-text {
-            font-size: 56px;
+            font-size: 64px;
             font-weight: 900;
-            margin: 0;
+            margin: 5px 0;
+            line-height: 1;
             background: linear-gradient(to bottom, #fff, var(--accent));
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
 
-        .status-badge {
-            display: inline-block;
-            padding: 4px 12px;
-            border-radius: 100px;
+        .tactical-report {
+            margin-top: 15px;
+        }
+
+        .report-title {
             font-size: 11px;
             font-weight: 800;
-            margin-bottom: 5px;
+            color: var(--accent);
+            margin-bottom: 10px;
+            text-transform: uppercase;
         }
 
         .log-item {
-            padding: 10px;
-            font-size: 12px;
-            color: #cbd5e1;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            border-bottom: 1px solid rgba(255,255,255,0.05);
+            background: rgba(255,255,255,0.02);
+            padding: 12px;
+            border-radius: 12px;
+            margin-bottom: 8px;
+            border-left: 3px solid var(--accent);
         }
 
-        .log-icon { color: var(--accent); font-weight: bold; }
+        .log-header {
+            font-size: 11px;
+            font-weight: 800;
+            margin-bottom: 4px;
+            color: var(--text-main);
+        }
 
+        .log-desc {
+            font-size: 12px;
+            color: var(--text-dim);
+            line-height: 1.4;
+        }
+
+        .risk-high { border-left-color: var(--danger); }
     </style>
 </head>
 <body>
 
 <div class="wrapper">
     <div class="brand-header">
-        <h1>TITANIUM ENGINE</h1>
-        <div style="color: var(--accent); font-size: 10px; font-weight: 800;">AUTO-SAVE ON</div>
+        <h1>TACTICAL ENGINE</h1>
+        <div id="saveIndicator" style="color: var(--accent); font-size: 9px; font-weight: 800; opacity: 0.5;">● CLOUD SYNC</div>
     </div>
 
     <div class="glass-card">
         <div class="input-grid">
             <div class="full-width">
-                <label>Lig</label>
-                <select id="league" onchange="saveData()">
+                <label>Organizasyon / Lig</label>
+                <select id="league" onchange="saveAndRun()">
                     <option value="italya">Serie A (İtalya)</option>
                     <option value="ispanya">La Liga (İspanya)</option>
                     <option value="almanya">Bundesliga (Almanya)</option>
@@ -169,45 +186,49 @@
                 </select>
             </div>
             <div class="full-width">
-                <label>Maks npxG/Sh</label>
+                <label>Şut Kalitesi (npxG/Sh)</label>
                 <input type="number" id="npxg" step="0.01" oninput="saveData()">
             </div>
             <div>
-                <label>PPA</label>
+                <label>Ceza Sahası Pas (PPA)</label>
                 <input type="number" id="ppa" oninput="saveData()">
             </div>
             <div>
-                <label>PrgC</label>
+                <label>Top Taşıma (PrgC)</label>
                 <input type="number" id="prgc" oninput="saveData()">
             </div>
             <div class="full-width">
-                <label>Savunma (Tkl+Int)</label>
+                <label>Savunma Aksiyonu (Tkl+Int)</label>
                 <input type="number" id="tkl" oninput="saveData()">
             </div>
         </div>
-        <button class="btn-analyze" onclick="runAnalysis()">ANALİZ ET</button>
+        <button class="btn-analyze" onclick="runAnalysis()">Analizi Başlat</button>
     </div>
 
     <div id="result-panel" class="glass-card">
-        <div class="percentage-display">
-            <div id="badge" class="status-badge"></div>
+        <div class="summary-box">
+            <div id="statusTag" style="font-size: 10px; font-weight: 900; letter-spacing: 1px;">SİSTEM ANALİZİ</div>
             <h2 class="percentage-text" id="percDisplay">0%</h2>
+            <div id="verdict" style="font-size: 12px; font-weight: 600; color: var(--text-dim);"></div>
         </div>
-        <div id="logList"></div>
+        
+        <div class="tactical-report">
+            <div class="report-title">Taktiksel Saha Raporu</div>
+            <div id="logContainer"></div>
+        </div>
     </div>
 </div>
 
 <script>
-// Sayfa yüklendiğinde hafızadan verileri çek
 window.onload = function() {
-    const saved = JSON.parse(localStorage.getItem('metricData'));
+    const saved = JSON.parse(localStorage.getItem('metricData_v3'));
     if (saved) {
-        document.getElementById('league').value = saved.league || 'italya';
-        document.getElementById('npxg').value = saved.npxg || '';
-        document.getElementById('ppa').value = saved.ppa || '';
-        document.getElementById('prgc').value = saved.prgc || '';
-        document.getElementById('tkl').value = saved.tkl || '';
-        if(saved.hasResult) runAnalysis(); // Eğer sonuç varsa otomatik hesapla
+        document.getElementById('league').value = saved.league;
+        document.getElementById('npxg').value = saved.npxg;
+        document.getElementById('ppa').value = saved.ppa;
+        document.getElementById('prgc').value = saved.prgc;
+        document.getElementById('tkl').value = saved.tkl;
+        if(saved.hasResult) runAnalysis();
     }
 };
 
@@ -220,8 +241,10 @@ function saveData() {
         tkl: document.getElementById('tkl').value,
         hasResult: document.getElementById('result-panel').style.display === 'block'
     };
-    localStorage.setItem('metricData', JSON.stringify(data));
+    localStorage.setItem('metricData_v3', JSON.stringify(data));
 }
+
+function saveAndRun() { saveData(); runAnalysis(); }
 
 function runAnalysis() {
     const lg = document.getElementById('league').value;
@@ -233,55 +256,71 @@ function runAnalysis() {
     if(isNaN(npxg) || isNaN(ppa)) return;
 
     const thresholds = {
-        italya: { npxg: 0.08, ppa: 11, prgc: 32, tkl: 40 },
-        ispanya: { npxg: 0.09, ppa: 13, prgc: 30, tkl: 35 },
-        almanya: { npxg: 0.10, ppa: 15, prgc: 38, tkl: 30 },
-        ingiltere: { npxg: 0.09, ppa: 14, prgc: 40, tkl: 32 },
-        fransa: { npxg: 0.09, ppa: 12, prgc: 34, tkl: 38 }
+        italya: { npxg: 0.08, ppa: 11, prgc: 32, tkl: 40, name: "İtalya Serie A" },
+        ispanya: { npxg: 0.09, ppa: 13, prgc: 30, tkl: 35, name: "İspanya La Liga" },
+        almanya: { npxg: 0.10, ppa: 15, prgc: 38, tkl: 30, name: "Almanya Bundesliga" },
+        ingiltere: { npxg: 0.09, ppa: 14, prgc: 40, tkl: 32, name: "İngiltere Premier Lig" },
+        fransa: { npxg: 0.09, ppa: 12, prgc: 34, tkl: 38, name: "Fransa Ligue 1" }
     }[lg];
 
     let score = 55;
-    let logs = [];
+    let reports = [];
 
-    if (npxg <= thresholds.npxg) score += 15; else score -= 25;
-    if (ppa <= thresholds.ppa) score += 15; else score -= 20;
-    if (prgc <= thresholds.prgc) score += 10; else score -= 10;
+    // Detaylı Futbol Yorumu Algoritması
+    if (npxg <= thresholds.npxg) {
+        score += 15;
+        reports.push({h: "BİTİRİCİLİK KRİZİ", d: "Oyuncular kale önünde panik halinde. Net vuruş kalitesi lig ortalamasının altında.", r: false});
+    } else {
+        score -= 25;
+        reports.push({h: "KESKİN NİŞANCI RİSKİ", d: "Düşük pozisyon sayısına rağmen vuruş kalitesi çok yüksek. Tek şans golle sonuçlanabilir.", r: true});
+    }
+
+    if (ppa <= thresholds.ppa) {
+        score += 15;
+        reports.push({h: "BLOKE EDİLMİŞ BÖLGE", d: "Ceza sahası çevresinde 'etten duvar' örülmüş. Pas kanalları tamamen kapalı.", r: false});
+    } else {
+        score -= 20;
+        reports.push({h: "SAVUNMA SIZINTISI", d: "Rakip ceza sahasına sızmakta zorlanmıyor. Savunma arkası koşular risk yaratıyor.", r: true});
+    }
+
+    if (prgc <= thresholds.prgc) {
+        score += 10;
+        reports.push({h: "STATİK OYUN", d: "Dikey top taşıma yok denecek kadar az. Oyun orta sahada yana paslarla boğulmuş durumda.", r: false});
+    } else {
+        score -= 10;
+        reports.push({h: "DİNAMİK PENETRASYON", d: "Bireysel yetenekler topla mesafe katediyor. Kontra atak ihtimali kağıt üzerinde yüksek.", r: true});
+    }
 
     if (tkl >= thresholds.tkl) {
         score += 12;
-        logs.push("Savunma hattı dirençli.");
+        reports.push({h: "AGRESİF MÜDAHALE", d: "Savunma hattı temastan kaçınmıyor. Rakip oyun kurucular sürekli baskı altında.", r: false});
     } else if (ppa <= (thresholds.ppa * 0.8)) {
         score += 15;
-        logs.push("Üretim kilitli, savunma güvende.");
+        reports.push({h: "PASİF KONTROL", d: "Savunma hamle yapma gereği duymuyor çünkü top tehlikeli bölgeye hiç yaklaşmıyor.", r: false});
     } else {
         score -= 15;
-        logs.push("Savunma yerleşimi zayıf.");
+        reports.push({h: "YUMUŞAK SAVUNMA", d: "Müdahale sayısı yetersiz. Rakibe oyun kurması için çok fazla alan ve zaman tanınıyor.", r: true});
     }
 
     score = Math.min(94, Math.max(15, score));
-
-    const panel = document.getElementById('result-panel');
-    panel.style.display = 'block';
-    document.getElementById('percDisplay').innerText = '%' + score;
     
-    const badge = document.getElementById('badge');
-    const logsDiv = document.getElementById('logList');
+    document.getElementById('result-panel').style.display = 'block';
+    document.getElementById('percDisplay').innerText = '%' + score;
+    document.getElementById('verdict').innerText = `${thresholds.name} Standartlarında Analiz Edildi`;
+
+    const logsDiv = document.getElementById('logContainer');
     logsDiv.innerHTML = "";
-
-    if (score >= 80) {
-        badge.style.background = "rgba(0, 255, 133, 0.2)"; badge.style.color = "var(--accent)"; badge.innerText = "YÜKSEK GÜVEN";
-    } else if (score >= 65) {
-        badge.style.background = "rgba(255, 171, 0, 0.2)"; badge.style.color = "#ffab00"; badge.innerText = "ORTA RİSK";
-    } else {
-        badge.style.background = "rgba(255, 69, 58, 0.2)"; badge.style.color = "#ff453a"; badge.innerText = "YÜKSEK RİSK";
-    }
-
-    logs.push(`Lig Standardı: ${lg.toUpperCase()}`);
-    logs.forEach(msg => {
-        logsDiv.innerHTML += `<div class="log-item"><span class="log-icon">→</span> ${msg}</div>`;
+    reports.forEach(item => {
+        logsDiv.innerHTML += `
+            <div class="log-item ${item.r ? 'risk-high' : ''}">
+                <div class="log-header">${item.h}</div>
+                <div class="log-desc">${item.d}</div>
+            </div>
+        `;
     });
 
-    saveData(); // Sonucu da hafızaya kaydet
+    saveData();
+    gsap.from("#result-panel", { opacity: 0, y: 20, duration: 0.5 });
 }
 </script>
 </body>
